2008-04-22  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>

	* tag V00-22-11
	* point to new HLT Development DB at CMSR
	(src/conf/conf.properties)

2008-04-22  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>

	* tag V00-22-10
	* parser: fixes
	* data: add Block, add --blocks parameter for
	ConfigurationModifier
	* converter: take blocks into account; streams&datasets PSets
	taken into account

2008-04-21  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>

	* tag V00-22-09
	* gui: provide diff of paths/sequences upon import.

2008-04-21  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>

	* tag V00-22-08
	* speed-up configuration saving (still minutes from offside
	though)
	* propagate path manipulations to OutputModules

2008-04-16  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>

	* tag V00-22-07
	* webserver/converter: additional dirs which were missing
	* gui: fix importing of sequences
	* gui: warn before removing referenced sequences

2008-04-14  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>

	* tag V00-22-06
	* webserver/converter: updates (Ulf)
	* gui: OutputModule Editor

2008-04-02  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>

	* tag V00-22-05
	* converter: python beta release
	* add --search option to diff
	* add orderedSequenceIterator() to ConfigurationModifier, to be
	utilized by pythin converters

2008-03-31  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>

	* tag V00-22-04
	* gui: allow users to unlock their own configurations
	* gui: add 'GOTO' command to reference-popups
	* gui: remove databaseIds from configuration tree rendering

2008-03-30  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>

	* tag V00-22-03
	* critical fix regarding the import of paths and sequences!
		
2008-03-30  Philipp Schieferdecker  <philipp.schieferdecker@cern.ch>

	* tag V00-22-02
	* improved diff, added streams & datasets
	* bug fix: 'OK' button disabled while editing new directory name